// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextExtended renders int text multiline correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-ecd3bb5a-2e0a-4b57-bf67-b4baa95410b2"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField ms-TextField--multiline root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-52"
          >
            <textarea
              aria-invalid="false"
              class="ms-TextField-field field-53"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
            >
              This value was pre-filled
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders int text single line correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-1d5b6e87-1ccc-40e3-9a6a-02a4bcdc8a96"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputTextExtended renders text box with inline action correctly 1`] = `
<div
  id="input3"
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      id="__ac-4ebb0091-2bd2-4807-b523-ac916446b539"
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-TextField root-41"
      >
        <div
          class="ms-TextField-wrapper"
        >
          <div
            class="ms-TextField-fieldGroup fieldGroup-42"
          >
            <input
              aria-invalid="false"
              class="ms-TextField-field field-43"
              id="input3"
              maxlength="500"
              placeholder="enter comment"
              type="text"
              value="This value was pre-filled"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
